Done separate model from main.go
