# model/user.go
@@ -19,11 +19,11 @@ var users = []userModel{
 	{ID: "3", Email: "chananya.k@netpoleons.com", FirstName: "Chananya", LastName: "Krudnim", JobTitle: "iSec and Network Engineer"},
 }
 
-func getUsers(userModel, error) ([]userModel, error) {
+func GetUsers() ([]userModel, error) {
 	return users, nil
 }
 
-func getUserByID(id string) (userModel, error) {
+func GetUserByID(id string) (userModel, error) {
 	// Loop over the list of users, looking for
 	// an user whose ID value matches the parameter.
 	var user userModel
